# stadiumpulse

./: .gitignore  AUDIT_REPORT.md  README.md  SESSION_9_MEMORY.md  firebase.json  firestore.indexes.json  firestore.rules  wrangler.jsonc
backend/: .dockerignore  .env.example  Dockerfile  config.py  dependencies.py  limiter.py  logger.py  main.py  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt  ruff.toml  security.py
backend/models/: accessibility.py  briefing.py  chat.py  incident.py  route.py  user.py  zone.py
backend/routes/: accessibility_routes.py  auth_routes.py  briefing_routes.py  concierge_routes.py  crowd_routes.py  demo_routes.py  experience_routes.py  incident_routes.py  travel_routes.py  wayfinding_routes.py
backend/schemas/: errors.py  experience.py  requests.py  responses.py
backend/scripts/: grant_role.py
backend/seed/: seed_data.py
backend/services/: ai_core.py  briefing_service.py  concierge_service.py  crowd_service.py  crowd_simulator.py  db.py  demo_generation_service.py  demo_service.py  exceptions.py  experience_service.py  firestore_client.py  genkit_flows.py  incident_service.py  travel_service.py  wayfinding_service.py  zone_service.py
backend/tests/: conftest.py  fake_db.py  fake_db_seed.py  test_accessibility.py  test_ai_and_flows.py  test_auth.py  test_briefing.py  test_concierge.py  test_crowd.py  test_demo_and_security.py  test_demo_generation.py  test_dependencies.py  test_error_and_bootstrap.py  test_experience.py  test_incident.py  test_python_structure.py  test_service_edges.py  test_travel.py  (+2 more)
(+186 files in other folders)
